Sun Nov 01 21:07:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* test.py: Skip test modules which depend on missing modules,
	  displaying an appropriate message. 

Sun Nov 01 21:01:54 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint revision numbers.

Mon Sep 07 08:13:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix wildcard support; was omitting
	  a "self" when looking for the wildcard flags.

Fri Sep 04 14:04:00 GMT 2009  Charlie Hull <charlie@flax.co.uk>

	* libs/build_xapian_win32.bat: new file to assist building under
	  Win32.

Thu Sep 03 12:05:34 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix
	  SearchConnection._get_freetext_fields - not sure we want to keep
	  this (it's not public, or called from anywhere), but might as
	  well make it work while we decide.

Tue Sep 01 13:53:06 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated packages with fixed windows build
	  system (hopefully).

Wed Aug 26 08:42:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New packages with fixes for windows.

Mon Aug 24 16:02:34 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint for windows
	  compilable tarballs.
	* xappy/fieldactions.py: Fix for document.fields being an iterator.

Mon Aug 24 12:16:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Updated tarballs -
	  should build for windows.

Fri Aug 21 12:17:29 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Add iter_buckets_rgb() to iterate through all
	  the buckets.  This can be used to generate a target palette for
	  quantization.

Fri Aug 21 09:00:41 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
